@@ -1,12 +1,11 @@
 package team.kaleni.ping.tower.backend.url_service.service;
 
-
 import io.netty.channel.ChannelOption;
 import jakarta.annotation.PostConstruct;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.client.reactive.ReactorClientHttpConnector;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
@@ -16,6 +15,8 @@ import reactor.netty.http.client.HttpClient;
 import reactor.netty.resources.ConnectionProvider;
 import reactor.util.retry.Retry;
 import team.kaleni.ping.tower.backend.url_service.dto.inner.PingResultDTO;
+import team.kaleni.ping.tower.backend.url_service.entity.HttpMethod;
+import team.kaleni.ping.tower.backend.url_service.entity.Monitor;
 import team.kaleni.ping.tower.backend.url_service.entity.PingStatus;
 
 import java.net.ConnectException;
@@ -37,7 +38,7 @@ public class EnhancedPingService {
     @Value("${ping.retry.delay:500}")
     private long retryDelayMs;
 
-    @Value("${ping.max-header-size:32768}") // Add this configuration
+    @Value("${ping.max-header-size:32768}")
     private int maxHeaderSize;
 
     @PostConstruct
@@ -49,24 +50,22 @@ public class EnhancedPingService {
                 .maxLifeTime(Duration.ofSeconds(60))
                 .pendingAcquireTimeout(Duration.ofSeconds(10))
                 .build();
-
         HttpClient httpClient = HttpClient.create(connectionProvider)
                 .followRedirect(true)
-                .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 10000) // Connection timeout
-                .responseTimeout(Duration.ofSeconds(30)) // HTTP response timeout
+                .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 10000)
+                .responseTimeout(Duration.ofSeconds(30))
                 .compress(true)
-                .httpResponseDecoder(spec -> spec.maxHeaderSize(maxHeaderSize)); // Now maxHeaderSize = 32768
-
+                .httpResponseDecoder(spec -> spec.maxHeaderSize(maxHeaderSize));
         this.webClient = WebClient.builder()
                 .clientConnector(new ReactorClientHttpConnector(httpClient))
                 .build();
     }
 
     /**
-     * Performs detailed HTTP ping with comprehensive result capture
+     * Enhanced ping method that supports all HTTP methods and configurations from Monitor
      */
-    public PingResultDTO pingURL(String url, int timeoutMs) {
-        if (url == null || url.trim().isEmpty()) {
+    public PingResultDTO pingMonitor(Monitor monitor) {
+        if (monitor.getUrl() == null || monitor.getUrl().trim().isEmpty()) {
             return PingResultDTO.builder()
                     .status(PingStatus.ERROR)
                     .errorMessage("URL is null or empty")
@@ -75,27 +74,27 @@ public class EnhancedPingService {
         }
         long startTime = System.currentTimeMillis();
         try {
-            return webClient.head()
-                    .uri(url)
+            WebClient.RequestHeadersSpec<?> requestSpec = buildRequest(monitor);
+            return requestSpec
                     .retrieve()
                     .toBodilessEntity()
-                    .timeout(Duration.ofMillis(timeoutMs))
+                    .timeout(Duration.ofMillis(monitor.getTimeoutMs()))
                     .retryWhen(Retry.backoff(retryAttempts, Duration.ofMillis(retryDelayMs))
-                            .filter(this::isRetryableException))
+                            .filter(this::isRetriableException))
                     .map(response -> {
                         long responseTime = System.currentTimeMillis() - startTime;
                         HttpStatus status = (HttpStatus) response.getStatusCode();
+
                         Map<String, Object> metadata = new HashMap<>();
-                        // Safely capture response headers (limit size to prevent memory issues)
+                        // Capture response headers (but keep them minimal)
                         response.getHeaders().forEach((key, values) -> {
-                            if (values.size() == 1) {
-                                metadata.put(key, values.getFirst());
-                            } else {
-                                metadata.put(key, values);
+                            if ("content-type".equalsIgnoreCase(key) ||
+                                    "server".equalsIgnoreCase(key) ||
+                                    "date".equalsIgnoreCase(key)) {
+                                metadata.put(key, values.size() == 1 ? values.get(0) : values);
                             }
                         });
                         PingStatus pingStatus = determinePingStatus(status.value());
-                        metadata.clear(); //todo check out this, by default it takes sooo much space...
                         return PingResultDTO.builder()
                                 .status(pingStatus)
                                 .responseCode(status.value())
@@ -110,11 +109,53 @@ public class EnhancedPingService {
                         return Mono.just(errorResult);
                     })
                     .block();
+
         } catch (Exception e) {
             long responseTime = System.currentTimeMillis() - startTime;
-            log.error("Unexpected error pinging URL {}: {}", url, e.getMessage());
+            log.error("Unexpected error pinging monitor {}: {}", monitor.getId(), e.getMessage());
             return createErrorResult(e, (int) responseTime);
         }
+    }
+
+    /**
+     * Build request with full HTTP method, headers, and body support
+     */
+    private WebClient.RequestHeadersSpec<?> buildRequest(Monitor monitor) {
+        String url = monitor.getUrl();
+        HttpMethod method = monitor.getMethod();
+        Map<String, String> headers = monitor.getHeaders();
+        String requestBody = monitor.getRequestBody();
+        String contentType = monitor.getContentType();
+
+        // Build the base request spec based on HTTP method
+        WebClient.RequestHeadersSpec<?> headersSpec;
+
+        switch (method) {
+            case GET -> headersSpec = webClient.get().uri(url);
+            case POST -> {
+                WebClient.RequestBodyUriSpec postSpec = webClient.post();
+                headersSpec = postSpec.uri(url);
+
+                // Handle POST body
+                if (requestBody != null && !requestBody.trim().isEmpty()) {
+                    String mediaType = contentType != null ? contentType : "application/json";
+                    return postSpec.uri(url)
+                            .contentType(MediaType.parseMediaType(mediaType))
+                            .bodyValue(requestBody);
+                }
+            }
+            case HEAD -> headersSpec = webClient.head().uri(url);
+            default -> headersSpec = webClient.get().uri(url); // fallback to GET
+        }
+
+        // Add custom headers
+        if (headers != null && !headers.isEmpty()) {
+            for (Map.Entry<String, String> header : headers.entrySet()) {
+                headersSpec = headersSpec.header(header.getKey(), header.getValue());
+            }
+        }
+
+        return headersSpec;
     }
 
     private PingStatus determinePingStatus(int responseCode) {
@@ -127,7 +168,7 @@ public class EnhancedPingService {
         }
     }
 
-    private boolean isRetryableException(Throwable throwable) {
+    private boolean isRetriableException(Throwable throwable) {
         return throwable instanceof TimeoutException ||
                 throwable instanceof ConnectException ||
                 (throwable instanceof WebClientResponseException &&
@@ -137,6 +178,7 @@ public class EnhancedPingService {
     private PingResultDTO createErrorResult(Throwable throwable, int responseTime) {
         PingStatus status = PingStatus.ERROR;
         String errorMessage = throwable.getMessage();
+
         switch (throwable) {
             case TimeoutException timeoutException -> {
                 status = PingStatus.TIMEOUT;
@@ -159,8 +201,10 @@ public class EnhancedPingService {
                         .build();
             }
             default -> {
+                // Handle other exceptions
             }
         }
+
         return PingResultDTO.builder()
                 .status(status)
                 .responseTimeMs(responseTime)
